--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | AITest</title>
+    <title>Unity WebGL Player | LipSync</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">AITest</div>
+        <div id="unity-build-title">LipSync</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/AITTSTEST.loader.js";
+      var loaderUrl = buildUrl + "/AITTSTestBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AITTSTEST.data",
-        frameworkUrl: buildUrl + "/AITTSTEST.framework.js",
-        codeUrl: buildUrl + "/AITTSTEST.wasm",
+        dataUrl: buildUrl + "/AITTSTestBuild.data",
+        frameworkUrl: buildUrl + "/AITTSTestBuild.framework.js",
+        codeUrl: buildUrl + "/AITTSTestBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "AITest",
+        productName: "LipSync",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
